// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabbedContent renders Header properly according to snapshot 1`] = `
<div
  className="tab-header header activeHeader "
  onClick={[Function]}
>
  just some Header
</div>
`;

exports[`TabbedContent renders Tab properly according to snapshot 1`] = `
<div
  className="tab-component undefined"
  style={
    Object {
      "color": "blue",
    }
  }
/>
`;

exports[`TabbedContent renders TabbedContent properly according to snapshot 1`] = `
<TabbedContent
  activeTab={0}
  align="right"
  className="mySwitch"
  id="5"
  style={
    Object {
      "color": "black",
    }
  }
  type="normal"
  vertical={true}
>
  <div
    className="tabbed-content-component container containerV"
    id="5"
  >
    <div
      className="heading headingV headingCenter "
    >
      <Header
        active={false}
        className="mySwitch"
        onClick={[Function]}
        style={
          Object {
            "color": "black",
          }
        }
        type="normal"
        vertical={true}
      >
        <div
          className="tab-header header inactiveHeader "
          onClick={[Function]}
          style={
            Object {
              "color": "black",
            }
          }
        >
          Moosend
        </div>
      </Header>
      <Header
        active={true}
        className="mySwitch"
        onClick={[Function]}
        style={
          Object {
            "color": "black",
          }
        }
        type="normal"
        vertical={true}
      >
        <div
          className="tab-header header activeHeader "
          onClick={[Function]}
          style={
            Object {
              "color": "black",
            }
          }
        >
          Home
        </div>
      </Header>
      <Header
        active={false}
        className="mySwitch"
        onClick={[Function]}
        style={
          Object {
            "color": "black",
          }
        }
        type="normal"
        vertical={true}
      >
        <div
          className="tab-header header inactiveHeader "
          onClick={[Function]}
          style={
            Object {
              "color": "black",
            }
          }
        >
          About
        </div>
      </Header>
    </div>
    <div
      className="content contentV"
    >
      <Content
        active={false}
      >
        <div
          className="content-component invisible undefined"
        >
          Table
        </div>
      </Content>
      <Content
        active={true}
      >
        <div
          className="content-component visible undefined"
        >
          Some Content
        </div>
      </Content>
      <Content
        active={false}
      >
        <div
          className="content-component invisible undefined"
        >
          Blla blla
        </div>
      </Content>
    </div>
  </div>
</TabbedContent>
`;

exports[`TabbedContent renders TabbedContent vertically with radio styles 1`] = `
<div
  className="tabbed-content-component container containerV"
>
  <div
    className="heading headingV headingCenter "
  >
    <Header
      active={false}
      className="mySwitch"
      onClick={[Function]}
      style={
        Object {
          "color": "black",
        }
      }
      type="radio"
      vertical={true}
    >
      Moosend
    </Header>
    <Header
      active={true}
      className="mySwitch"
      onClick={[Function]}
      style={
        Object {
          "color": "black",
        }
      }
      type="radio"
      vertical={true}
    >
      Home
    </Header>
    <Header
      active={false}
      className="mySwitch"
      onClick={[Function]}
      style={
        Object {
          "color": "black",
        }
      }
      type="radio"
      vertical={true}
    >
      About
    </Header>
  </div>
  <div
    className="content contentV"
  >
    <Content
      active={false}
    >
      Table
    </Content>
    <Content
      active={true}
    >
      Some Content
    </Content>
    <Content
      active={false}
    >
      Blla blla
    </Content>
  </div>
</div>
`;
